--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>EasyExpress</title>
-    <link rel="icon" href="/assets/icon.png" type="image/icon type" />
+    <link rel="icon" href="assets/icon.png" type="image/icon type" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CDN -->
@@ -95,11 +95,11 @@
 
 
 
-                
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog</a>
                     </li>
-                    
+
                     <li class="nav-item">
                         <a class="nav-link blinking" href="#">More Coming Soon</a>
                     </li>
@@ -121,13 +121,13 @@
         <section id="banner-area" class="container text-center col-md-11 col-sm">
             <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <a href="#!"><img src="../assets/Banner1.png" alt="Banner1"></a>
+                    <a href="#!"><img src="assets/Banner1.png" alt="Banner1"></a>
                 </div>
                 <div class="item">
-                    <a href="#!"><img src="../assets/Banner2.png" alt="Banner2"></a>
+                    <a href="#!"><img src="assets/Banner2.png" alt="Banner2"></a>
                 </div>
                 <div class="item">
-                    <a href="#!"><img src="../assets/Banner3.png" alt="Banner3"></a>
+                    <a href="#!"><img src="assets/Banner3.png" alt="Banner3"></a>
                 </div>
                 <div class="item">
                     <a href="#!"><img src="../assets/Banner4.png" alt="Banner3"></a>
@@ -149,7 +149,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs1.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs1.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">NO.ONEPAUL cow genuine leather luxury strap male belts for men new
                                         ...</p>
@@ -173,7 +173,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs2.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs2.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">Yobest 2020 Silver color Snake Sword Choker Necklaces For ...</p>
                                     <h6 class="mt-3">44% off</h6>
@@ -196,7 +196,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs3.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs3.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">KEYSION Shockproof Case for Redmi Note 8 Pro 9s 8 8A 7 7A 8T ...</p>
                                     <h6 class="mt-3">85% off</h6>
@@ -219,7 +219,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs4.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs4.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">LIOUMO Top Photochromic Sunglasses Men Women Polarized ...</p>
                                     <h6 class="mt-3">20% off</h6>
@@ -242,7 +242,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs5.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs5.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p>2020 New Women sexy underwear Dot mesh See-Through lingerie ...</p>
                                     <h6 class="mt-3">44% off</h6>
@@ -265,7 +265,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs6.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs6.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">Men's Shorts Summer Breeches 2020 Thin Nylon 3/4 Length ...</p>
                                     <h6 class="mt-3">85% off</h6>
@@ -288,7 +288,7 @@
                     <div class="item py-2 px-2">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/flashSales/fs7.jpg" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/flashSales/fs7.jpg" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <p class="mt-3">PZOZ Usb Cable For iphone cable 11 pro max Xs Xr X SE 2 8 7 6 plus
                                         6s 5s ...</p>
@@ -338,7 +338,7 @@
                     <div class="grid-item Apple border">
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="../assets/products/13.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/13.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Apple iPhone 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -359,7 +359,7 @@
                     <div class="grid-item Samsung border">
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="../assets/products/11.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/11.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -380,7 +380,7 @@
                     <div class="grid-item Redmi border">
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/3.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Redmi Note 7 Pro</h6>
                                     <div class="rating text-warning font-size-12">
@@ -401,7 +401,7 @@
                     <div class="grid-item Apple border">
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="../assets/products/14.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/14.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Apple iPhone 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -422,7 +422,7 @@
                     <div class="grid-item Samsung border">
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="../assets/products/12.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/12.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -444,7 +444,7 @@
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="../assets/products/4.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/4.png" class="img-fluid" alt="pro1"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -467,7 +467,7 @@
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="../assets/products/5.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/5.png" class="img-fluid" alt="pro1"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -490,7 +490,7 @@
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="../assets/products/6.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/6.png" class="img-fluid" alt="pro1"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -513,7 +513,7 @@
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="../assets/products/10.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/10.png" class="img-fluid" alt="pro1"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -536,7 +536,7 @@
                         <div class="item py-2" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="../assets/products/13.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/13.png" class="img-fluid" alt="pro1"></a>
                                     <div class="text-center">
                                         <h6>Apple iPhone 10</h6>
                                         <div class="rating text-warning font-size-12">
@@ -563,8 +563,8 @@
         <!-- Banner Ads  -->
         <section id="banner_adds">
             <div class="container py-5 text-center">
-                <img src="../assets/banner1-cr-500x150.jpg" alt="banner1" class="img-fluid">
-                <img src="../assets/banner2-cr-500x150.jpg" alt="banner1" class="img-fluid">
+                <img src="assets/banner1-cr-500x150.jpg" alt="banner1" class="img-fluid">
+                <img src="assets/banner2-cr-500x150.jpg" alt="banner1" class="img-fluid">
 
             </div>
         </section>
@@ -582,7 +582,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                                 <h6>Samsung Galaxy 10</h6>
                                 <div class="rating text-warning font-size-12">
@@ -601,7 +601,7 @@
                     </div>
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/2.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="assets/products/2.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -620,7 +620,7 @@
                     </div>
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/3.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="assets/products/3.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -639,7 +639,7 @@
                     </div>
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/6.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="assets/products/6.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                                 <h6>Samsung Galaxy 10</h6>
                                 <div class="rating text-warning font-size-12">
@@ -658,7 +658,7 @@
                     </div>
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
-                            <a href="#"><img src="../assets/products/1.png" alt="product1" class="img-fluid"></a>
+                            <a href="#"><img src="assets/products/1.png" alt="product1" class="img-fluid"></a>
                             <div class="text-center">
                                 <h6>Readme Note 7</h6>
                                 <div class="rating text-warning font-size-12">
@@ -678,7 +678,7 @@
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/products/1.png" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/products/1.png" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <h6>Readme Note 7</h6>
                                     <div class="rating text-warning font-size-12">
@@ -699,7 +699,7 @@
                     <div class="item py-2 bg-light">
                         <div class="product font-rale">
                             <div class="d-flex flex-column">
-                                <a href="#"><img src="../assets/products/2.png" class="img-fluid" alt="pro1"></a>
+                                <a href="#"><img src="assets/products/2.png" class="img-fluid" alt="pro1"></a>
                                 <div class="text-center">
                                     <h6>Readme Note 7</h6>
                                     <div class="rating text-warning font-size-12">
@@ -735,7 +735,7 @@
                     <div class="item">
                         <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                             <h5 class="card-title font-size-16">Upcoming Offers</h5>
-                            <img src="../assets/blog/blog1.jpg" alt="cart image" class="card-img-top">
+                            <img src="assets/blog/blog1.jpg" alt="cart image" class="card-img-top">
                             <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur
                                 adipisicing
                                 elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.
@@ -746,7 +746,7 @@
                     <div class="item">
                         <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                             <h5 class="card-title font-size-16">Running Campaigns</h5>
-                            <img src="../assets/blog/blog2.jpg" alt="cart image" class="card-img-top">
+                            <img src="assets/blog/blog2.jpg" alt="cart image" class="card-img-top">
                             <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur
                                 adipisicing
                                 elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.
@@ -757,7 +757,7 @@
                     <div class="item">
                         <div class="card border-0 font-rale mr-5" style="width: 18rem;">
                             <h5 class="card-title font-size-16">Techolic Updates</h5>
-                            <img src="../assets/blog/blog3.jpg" alt="cart image" class="card-img-top">
+                            <img src="assets/blog/blog3.jpg" alt="cart image" class="card-img-top">
                             <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur
                                 adipisicing
                                 elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.
