--- a/index.html
+++ b/index.html
@@ -117,24 +117,50 @@
 
     <main id="main-site">
 
+
+
         <!-- Owl-carousel -->
-        <section id="banner-area" class="container text-center col-md-11 col-sm">
-            <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <a href="#!"><img src="assets/Banner1.png" alt="Banner1"></a>
+
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+
+                    <div class="carousel-item">
+                        <img src="assets/Banner3.jpg" class="d-block w-100" alt="...">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/Banner2.jpg" class="d-block w-100" alt="...">
+                    </div>
+
+                    <div class="carousel-item active">
+                        <img src="assets/Banner1.jpg" class="d-block w-100" alt="...">
+                    </div>
+
+
+
                 </div>
-                <div class="item">
-                    <a href="#!"><img src="assets/Banner2.png" alt="Banner2"></a>
-                </div>
-                <div class="item">
-                    <a href="#!"><img src="assets/Banner3.png" alt="Banner3"></a>
-                </div>
-                <div class="item">
-                    <a href="#!"><img src="../assets/Banner4.png" alt="Banner3"></a>
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-        </section>
+        </div>
+
         <!-- !Owl-carousel -->
+
+
+
+
 
 
         <!-- Flash Sale -->
@@ -733,7 +759,7 @@
 
                 <div class="owl-carousel owl-theme">
                     <div class="item">
-                        <div class="card border-0 font-rale mr-5" style="width: 18rem;">
+                        <div class="card border-0 font-rale mr-5 " style="width: 18rem;">
                             <h5 class="card-title font-size-16">Upcoming Offers</h5>
                             <img src="assets/blog/blog1.jpg" alt="cart image" class="card-img-top">
                             <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur
@@ -810,7 +836,7 @@
                         <a href="#" class="font-rale font-size-14 text-white-50 pb-1">Terms & Conditions</a>
                     </div>
                 </div>
-                <div class="col-lg-2 col-12">
+                <div class="col-lg-2 col-12 align-items-center">
                     <h4 class="font-rubik font-size-20">Account</h4>
                     <div class="d-flex flex-column flex-wrap">
                         <a href="#" class="font-rale font-size-14 text-white-50 pb-1">My Account</a>
