--- a/index.html
+++ b/index.html
@@ -808,14 +808,14 @@
     <footer id="footer" class="bg-dark text-white py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-12">
+                <div class="col-lg-3 col-12 mt-5">
                     <h4 class="font-rubik font-size-20">EasyExpress</h4>
                     <p class="font-size-14 font-rale text-white-50">Lorem ipsum dolor sit amet consectetur, adipisicing
                         elit. Repellendus, deserunt.</p>
                 </div>
-                <div class="col-lg-4 col-12">
+                <div class="col-lg-4 col-12 mt-5">
                     <h4 class="font-rubik font-size-20">Get in Touch </h4>
-                    <div class="row">
+                    <div class="row mt-2">
                         <div id="icon">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </div>
@@ -827,7 +827,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-12">
+                <div class="col-lg-2 col-12 mt-5">
                     <h4 class="font-rubik font-size-20">Information</h4>
                     <div class="d-flex flex-column flex-wrap">
                         <a href="#" class="font-rale font-size-14 text-white-50 pb-1">About Us</a>
@@ -836,7 +836,7 @@
                         <a href="#" class="font-rale font-size-14 text-white-50 pb-1">Terms & Conditions</a>
                     </div>
                 </div>
-                <div class="col-lg-2 col-12 align-items-center">
+                <div class="col-lg-2 col-12 mt-5">
                     <h4 class="font-rubik font-size-20">Account</h4>
                     <div class="d-flex flex-column flex-wrap">
                         <a href="#" class="font-rale font-size-14 text-white-50 pb-1">My Account</a>
