--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
                 <div class="grid">
                     <div class="grid-item Apple border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <a href="#"><img src="assets/products/13.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                     <div class="grid-item Samsung border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <a href="#"><img src="assets/products/11.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
@@ -404,7 +404,7 @@
                         </div>
                     </div>
                     <div class="grid-item Redmi border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <a href="#"><img src="assets/products/3.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
@@ -425,7 +425,7 @@
                         </div>
                     </div>
                     <div class="grid-item Apple border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <a href="#"><img src="assets/products/14.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
@@ -446,7 +446,7 @@
                         </div>
                     </div>
                     <div class="grid-item Samsung border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <a href="#"><img src="assets/products/12.png" alt="product1" class="img-fluid"></a>
                                 <div class="text-center">
@@ -467,7 +467,7 @@
                         </div>
                     </div>
                     <div class="grid-item  Redmi border ">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
                                     <a href="#"><img src="assets/products/4.png" class="img-fluid" alt="pro1"></a>
@@ -490,7 +490,7 @@
                         </div>
                     </div>
                     <div class="grid-item  Redmi border ">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
                                     <a href="#"><img src="assets/products/5.png" class="img-fluid" alt="pro1"></a>
@@ -513,7 +513,7 @@
                         </div>
                     </div>
                     <div class="grid-item  Redmi border ">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
                                     <a href="#"><img src="assets/products/6.png" class="img-fluid" alt="pro1"></a>
@@ -536,7 +536,7 @@
                         </div>
                     </div>
                     <div class="grid-item  Redmi border">
-                        <div class="item py-2" style="width: 200px;">
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
                                     <a href="#"><img src="assets/products/10.png" class="img-fluid" alt="pro1"></a>
@@ -559,7 +559,8 @@
                         </div>
                     </div>
                     <div class="grid-item Apple border">
-                        <div class="item py-2" style="width: 200px;">
+
+                        <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
                                     <a href="#"><img src="assets/products/13.png" class="img-fluid" alt="pro1"></a>
@@ -580,6 +581,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
             </div>
