--- a/index.html
+++ b/index.html
@@ -589,6 +589,14 @@
         </section>
         <!-- !Special Price -->
 
+        <span>
+            <div class="container">
+                <span>
+
+                </span>
+            </div>
+        </span>
+
         <!-- Banner Ads  -->
         <section id="banner_adds">
             <div class="container py-5 text-center">
