--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
                     <div class="grid-item Apple border">
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="assets/products/13.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/13.png" alt="product1" class="img-fluid"
+                                        style="width: 200px;"></a>
                                 <div class="text-center">
                                     <h6>Apple iPhone 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -385,7 +386,8 @@
                     <div class="grid-item Samsung border">
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="assets/products/11.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/11.png" alt="product1" class="img-fluid"
+                                        style="width: 200px;"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -406,7 +408,8 @@
                     <div class="grid-item Redmi border">
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="assets/products/3.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/3.png" alt="product1" class="img-fluid"
+                                        style="width: 200px;"></a>
                                 <div class="text-center">
                                     <h6>Redmi Note 7 Pro</h6>
                                     <div class="rating text-warning font-size-12">
@@ -427,7 +430,8 @@
                     <div class="grid-item Apple border">
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="assets/products/14.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/14.png" alt="product1" class="img-fluid"
+                                        style="width: 200px;"></a>
                                 <div class="text-center">
                                     <h6>Apple iPhone 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -448,7 +452,8 @@
                     <div class="grid-item Samsung border">
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
-                                <a href="#"><img src="assets/products/12.png" alt="product1" class="img-fluid"></a>
+                                <a href="#"><img src="assets/products/12.png" alt="product1" class="img-fluid"
+                                        style="width: 200px;"></a>
                                 <div class="text-center">
                                     <h6>Samsung Galaxy 10</h6>
                                     <div class="rating text-warning font-size-12">
@@ -470,7 +475,8 @@
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="assets/products/4.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/4.png" class="img-fluid" alt="pro1"
+                                            style="width: 200px;"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -493,7 +499,8 @@
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="assets/products/5.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/5.png" class="img-fluid" alt="pro1"
+                                            style="width: 200px;"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -516,7 +523,8 @@
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="assets/products/6.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/6.png" class="img-fluid" alt="pro1"
+                                            style="width: 200px;"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -539,7 +547,8 @@
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="assets/products/10.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/10.png" class="img-fluid" alt="pro1"
+                                            style="width: 200px;"></a>
                                     <div class="text-center">
                                         <h6>Redmi Note 7 Pro</h6>
                                         <div class="rating text-warning font-size-12">
@@ -563,7 +572,8 @@
                         <div class="item py-2 bg-light" style="width: 200px;">
                             <div class="product font-rale">
                                 <div class="d-flex flex-column">
-                                    <a href="#"><img src="assets/products/13.png" class="img-fluid" alt="pro1"></a>
+                                    <a href="#"><img src="assets/products/13.png" class="img-fluid" alt="pro1"
+                                            style="width: 200px;"></a>
                                     <div class="text-center">
                                         <h6>Apple iPhone 10</h6>
                                         <div class="rating text-warning font-size-12">
@@ -589,13 +599,7 @@
         </section>
         <!-- !Special Price -->
 
-        <span>
-            <div class="container">
-                <span>
 
-                </span>
-            </div>
-        </span>
 
         <!-- Banner Ads  -->
         <section id="banner_adds">
