special price section wrap into a container-fluid

--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
         <!-- !Flash Sale -->
 
 
-        <!-- Special Price -->
+        <div class="container-fluid" >
+            <!-- Special Price -->
         <section id="special-price">
             <div class="container">
                 <h4 class="font-rubik font-size-20">Top Phones</h4>
@@ -598,6 +599,7 @@
             </div>
         </section>
         <!-- !Special Price -->
+        </div>
 
 
 
