--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 
                 <div class="dropdown">
                     <a href="#" class="px-3 border-right border-left  text-dark">App <i class="fa fa-mobile"
-                        aria-hidden="true"></i></a>
-                <a href="#" class="px-3 border-right text-dark">Whishlist (0)</a>
-                        <a class="px-3 border-right text-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            aria-hidden="true"></i></a>
+                    <a href="#" class="px-3 text-dark">Whishlist (0)</a>
+                    <a class="px-3 border-right  border-left text-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                         <form id="login">
                             <div class="form-group">
                                 <label for="uname">Username:</label>
-                                <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname"
-                                    required>
+                                <input type="text" class="form-control" id="uname" placeholder="Enter username"
+                                    name="uname" required>
                             </div>
                             <div class="form-group">
                                 <label for="pwd">Password:</label>
@@ -67,9 +67,9 @@
                     </div>
                 </div>
 
-                
 
-                
+
+
             </div>
         </div>
 
@@ -78,7 +78,7 @@
 
         <!-- Primary Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark color-second-bg">
-            <a class="navbar-brand" href="#"> EasyExpress</a>
+            <a class="navbar-brand" href="index.html"> EasyExpress</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
